--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ body {
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    background: #0a0a0c;
 }
 
 h1{
@@ -18,17 +17,44 @@ h1, h2, h3, h4, ul, p {
     padding: 0;
     list-style: none;
     font-weight: lighter;
-    color: #ffffff;
 }
-
+a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
 * {
     box-sizing: border-box;
 }
 header{
-
+    width: 100%;
 }
 .navigation{
-
+    width: 100%;
+    display: block;
+}
+.navigation ul{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    border-bottom: solid 1px #BABABA;
+}
+.navigation ul li{
+    width: calc(100% / 8);
+    text-align: center;
+    border-right: solid 1px #BABABA;
+    height: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.navigation ul li:first-child{
+    border-left: solid 1px #BABABA;
 }
 .header{
 
@@ -51,8 +77,17 @@ main{
 .leftContent{
 
 }
+article header{
+
+}
+.contentImg{
+
+}
 .contentText{
 
+}
+.contentText span{
+    font-weight: bold;
 }
 .contentList{
 
