--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ header{
     width: calc(100% / 8);
     text-align: center;
     border-right: solid 1px #BABABA;
-    height: 50px;
+    height: 30px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -57,40 +57,92 @@ header{
     border-left: solid 1px #BABABA;
 }
 .header{
-
+    width: 100%;
+    height: 125px;
+    background-color: #B80000;
+    color: #fff;
 }
 .news{
+    border-bottom: solid 1px #fff;
+    height: 95px;
 
 }
-.news ul li{
-
+.hotTopics{
+    width: 80%;
+    margin: auto;
+}
+.hotTopics ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.hotTopics ul li{
+    padding: 0 7px;
+    margin-top: 7px;
+    border-right: solid 1px white;
+}
+.hotTopics ul li a{
+    color: #fff;
+    font-weight: normal;
 }
 main{
-
+    width: 80%;
+    margin: auto;
 }
 .main{
-
 }
 .content{
-
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .leftContent{
-
+    width: 65%;
+}
+.leftContent > * {
+    margin-bottom: 50px;
 }
 article header{
-
+    font-size: 26px;
+    font-weight: bold;
+    margin: 60px 0;
+    padding-bottom: 50px;
+    border-bottom: solid 1px #BABABA;
+}
+article header h1{
+    width: 80%;
 }
 .contentImg{
-
+    background-color: #000;
+    height: 500px;
 }
 .contentText{
-
+    margin-top: 30px;
+    width: 80%;
 }
-.contentText span{
+.contentText > * {
+    margin-bottom: 25px;
+}
+.content span{
     font-weight: bold;
 }
+.content a{
+    font-weight: bold;
+    text-decoration: underline #BABABA;
+}
+.content a:hover{
+    cursor: pointer;
+    color: cornflowerblue;
+}
 .contentList{
-
+    margin-left: 50px;
+}
+.contentList li{
+    margin-bottom: 20px;
+}
+.contentList li:last-child{
+    margin-bottom: 0;
 }
 .more{
 
@@ -102,7 +154,7 @@ article header{
 
 }
 .rightContent{
-
+    width: 20%;
 }
 aside{
 
