--- a/css/style.css
+++ b/css/style.css
@@ -145,26 +145,92 @@ article header h1{
     margin-bottom: 0;
 }
 .more{
-
+    margin: 25px 0;
+}
+.more h2{
+    font-weight: bold;
+    margin-bottom: 15px;
+    font-size: 20px;
 }
 .related{
-
+    border-bottom: solid 2px #B80000;
+    border-top: solid 2px #B80000;
+    padding: 30px 0;
+}
+.buttons{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 60%;
+}
+.buttons > div{
+    border: solid 1px #B80000;
+    padding: 10px;
+}
+.buttons > div:hover{
+    background-color: #B80000;
+    color: white;
+    cursor: pointer;
 }
 .topicMore{
-
+    margin-top: 25px;
+}
+.topicMore div{
+    margin: 20px;
 }
 .rightContent{
-    width: 20%;
+    width: 25%;
+    margin: 50px 0;
 }
-aside{
-
+aside:first-child{
+    border-bottom: solid 2px #B80000;
+    border-top: solid 2px #B80000;
+    padding: 25px 0;
+}
+aside h3{
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+aside div{
+    margin: 30px 0;
+}
+aside .fakeimg{
+    width: 100%;
+    height: 150px;
+    background-color: burlywood;
 }
 footer{
-
+    width: 100%;
+    background-color: #282828;
+    color: white;
 }
 .footerNavigation{
-
+    width: 80%;
+    margin: auto;
+}
+.footerNavigation ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    height: 75px;
+    width: 80%;
+    margin: auto;
+}
+.footerNavigation ul li{
+}
+.footerNavigation ul li a{
+    color: white;
+    border-right: solid 1px #BABABA;
+    border-left: solid 1px #BABABA;
+    padding: 0 20px;
+    height: 26px;
 }
 .legals{
-
+    font-weight: lighter;
+    font-size: 12px;
+    text-align: center;
+    padding: 15px;
 }
